@@ -34,6 +34,7 @@ Template for new versions:
 - `gui/unit-syndromes`: show the syndrome names properly in the UI
 
 ## Misc Improvements
+- `warn-stranded`: don't warn for units that are temporarily on unwalkable tiles (e.g. as they pass under a waterfall)
 
 ## Removed
 
